--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     --highlight-bg: #fff3cd;
     --success-color: #27ae60;
 }
-        html {
-    scroll-padding-top: 180px;  /* ← ADD THESE 3 LINES */
+html {
+    scroll-padding-top: 180px;
 }
 
         body {
