--- a/index.html
+++ b/index.html
@@ -39,16 +39,18 @@ html {
             -webkit-font-smoothing: antialiased;
         }
 
-        .header {
-            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-            color: white;
-            padding: 20px;
-            text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
+.header {
+    background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+    color: white;
+    padding: 20px;
+    text-align: center;
+    position: fixed;  /* ← CHANGED FROM STICKY TO FIXED */
+    top: 0;
+    left: 0;         /* ← ADD THIS */
+    right: 0;        /* ← ADD THIS */
+    z-index: 100;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
 
         .header h1 {
             font-size: 1.8em;
