--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Version: 2025-10-25 16:34:39 - WORKING VERSION -->
+    <!-- Version: 2025-10-25 18:07:24 - SCROLL FIXED -->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,12 +27,13 @@
     --success-color: #27ae60;
     --header-height: 180px;
 }
+
 html {
-    scroll-padding-top: var(--header-height);
+    scroll-padding-top: 200px;
+}
 
 h3[id], h4[id] {
-    scroll-margin-top: var(--header-height);
-}
+    scroll-margin-top: 200px;
 }
 
 body {
